--- a/templates/React templates.xml
+++ b/templates/React templates.xml
@@ -1,19 +1,19 @@
 <templateSet group="React templates">
   <template name="rfs" value="import React from 'react';&#10;&#10;const $NAME$ = (props) =&gt; (&#10;  &lt;div&gt;&#10;    $END$&#10;  &lt;/div&gt;&#10;);&#10;&#10;export default $NAME$;" description="A simple React function component." toReformat="false" toShortenFQNames="true">
-    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="NAME" expression="camelCase(fileNameWithoutExtension())" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
   <template name="rc" value="import React, {Component} from 'react';&#10;&#10;class $NAME$ extends Component {&#10;  render() {&#10;    return (&#10;      &lt;div&gt;&#10;        $END$&#10;      &lt;/div&gt;&#10;    );&#10;  };&#10;}&#10;&#10;export default $NAME$;" description="A simple React class component" toReformat="true" toShortenFQNames="true">
-    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="NAME" expression="capitalize(camelCase(fileNameWithoutExtension()))" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="ES6_STATEMENT" value="true" />
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
   <template name="rf" value="import React from 'react';&#10;&#10;const $NAME$ = (props) =&gt; {&#10;  return (&#10;    &lt;div&gt;&#10;      $END$&#10;    &lt;/div&gt;&#10;  );&#10;};&#10;&#10;export default $NAME$;" description="A React function component" toReformat="true" toShortenFQNames="true">
-    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="NAME" expression="camelCase(fileNameWithoutExtension())" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="ES6_STATEMENT" value="true" />
       <option name="JS_STATEMENT" value="true" />
